5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1828_1642.log
== TEST (2019-06-12 14:10:59) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
n = size(v)
for i in size(v):
	if(i%5==0):
		s = s + 1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:25) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
n = size(v)
for i in size(v)
	if(i%5==0):
		s = s + 1
	print(s)
-- ERROR:
File "XXXX", line 5
    for i in size(v)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:36) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
n = size(v)
for i in v:
	if(i%5==0):
		s = s + 1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:12:19) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
n = size(v)
for i in v:
	if(i%5==0):
		s = s + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:22) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
print(s)
n =0
x =0
for i in v:
	if(s!=0):
	x = x +1
	
-- ERROR:
File "XXXX", line 12
    x = x +1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:40:26) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
print(s)
n =0
x =0
for i in v:
	
	
-- EXECUTION TIME:
0.533533
-- ERROR:
  File "/home/codebench/codes/1828/1642/main.py", line 13
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:16) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
print(s)
n =0
x =0
for i in range(v):
	if()
	
	
-- ERROR:
File "XXXX", line 11
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:20) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
print(s)
n =0
x =0
for i in range(v):
	
	
	
-- ERROR:
File "XXXX", line 14
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:01) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in range(v):
	if(i%5==0):
	v[i]= i 
	n = v[i]
	t = zeros(n , dtype=int)
print(t)	
	
	
-- ERROR:
File "XXXX", line 13
    v[i]= i 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:12) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
	v[i]= i 
	n = v[i]
	t = zeros(n , dtype=int)
print(t)	
	
	
-- ERROR:
File "XXXX", line 13
    v[i]= i 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:32) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		v[i] = i 
		n = v[i]
		t = zeros(n , dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:52:05) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		v[i] = i 
		n = v[i]
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:52:41) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		v[i] = i 
		n = v[i]
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:44) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(v[i]%5==0):
		
		
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:41) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(v[i]%5==0):
		x = v[i]
		
		
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:07) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(v[i]%5==0):
		x = v[i]
		n = x
		
		
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:36) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		x = v[i]
		n = x
		
		
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:54) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		x = v[i]
		n = x
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:11) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		n = v[i]
		t = zeros(n, dtype=int)
print(t)	
	
	
-- EXECUTION TIME:
1.06289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1642/main.py", line 13, in <module>
    n = v[i]
IndexError: index 20 is out of bounds for axis 0 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:57:29) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		n = i
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:58:11) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		n = i
		t = zeros(n, dtype=int)
print(t)	
	
	
-- EXECUTION TIME:
1.1122
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:38) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		n = v[i]
		t = zeros(n, dtype=int)
print(t)	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:43) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	if(i%5==0):
		n = v[i]
		t = zeros(n, dtype=int)

r = v[i]
print()
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:04) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0
for i in v:
	
		
		t = zeros(n, dtype=int)

r = v[i]
print(r)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:11:30) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
		
print(s)
n =0
x =0


r = v[i]
print(r)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:52) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
for s e, range(v)		
print(s)
n =0
x =0



 
	
	
-- ERROR:
File "XXXX", line 8
    for s e, range(v)		
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:59) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
for s in range(v)		
print(s)
n =0
x =0



 
	
	
-- ERROR:
File "XXXX", line 8
    for s in range(v)		
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:42) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for s in range(v):
	



 
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:56) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in range(v):
	



 
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:13) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in range(size(v):
	



 
	
	
-- ERROR:
File "XXXX", line 9
    for i in range(size(v):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:15) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in range(size(v):
	



 
	
	
-- ERROR:
File "XXXX", line 9
    for i in range(size(v):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:15) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in range(size(v):
	



 
	
	
-- ERROR:
File "XXXX", line 9
    for i in range(size(v):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:16:16) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in range(size(v):
	



 
	
	
-- EXECUTION TIME:
0.879803
-- ERROR:
  File "/home/codebench/codes/1828/1642/main.py", line 9
    for i in range(size(v):
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:20) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in range(size(v)):
	



 
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:33) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in v:
	



 
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:18:01) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in v:
	



 
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:18:02) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
for i in v:
	



 
	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:25:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		r = v[i]
print(r)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:27:50) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		
print(r)
		



 
	
	
-- ERROR:
File "XXXX", line 13
    print(r)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:51) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		t = r * v[i]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:29:02) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		t = r * v[i]
print(t)
		



 
	
	
-- EXECUTION TIME:
1.04669
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:19) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		t = r * v[i]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:40) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		t = r + v[i]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:30:56) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		t = r * v[i]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:31:40) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	if(v[i]%5==0):
		t = r * v[i]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:35:03) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	n = 0
	if(v[i]%5==0):
		n = n + 1
		r[n] = i
		t = r + r[n]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:35:32) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	n = 0
	if(v[i]%5==0):
		n = 0
		r[n] = i
		n = n +1
		t = r + r[n]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:35:46) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	n = 0
	if(v[i]%5==0):
		r[n] = i
		n = n + 1
		t = r + r[n]
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:36:48) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	n = 0
	if(v[i]%5==0):
		r[n]= i
		n = n + 1
print(t)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:36:58) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	n = 0
	if(v[i]%5==0):
		r[n]= i
		n = n + 1
print(r)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:37:18) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	
	if(v[i]%5==0):
		r[n]= i
		n = n + 1
print(r)
		



 
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:37:31) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
s = 0
for i in v:
	if(i%5==0):
		s = s + 1
r = zeros(s,dtype=int)
print(s)
n = 0
for i in range(size(v)):
	
	if(v[i]%5==0):
		r[n]= i
		n = n + 1
print(r)
		



 
	
	
-- EXECUTION TIME:
1.20772
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
